--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,7 +110,45 @@ button{
   var(--border-radius)15px;
   background-color: blue;
 }
-#home>div{
-  width: 50%;;
+
+section div{
+  padding:20px;
+  border-radius: 1rem;
+  text-align: center;
+  margin:20px;
+}
+
+#profile div{
+  border:1px solid green;
+}
+#home{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
   
+
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  body {
+    background-color: pink;
+  }
+  #home{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    
+  
+  }
+}
+
+/* small screens */
+@media all and (min-width: 320px) and (max-width: 767px) {
+  body {
+    background-color: brown;
+  }
+  #home{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    
+  
+  }
 }
